--- a/HTML/logout.html
+++ b/HTML/logout.html
@@ -144,8 +144,7 @@
     </div>
     <!--Baloldal, Jobboldal-->
     <div class="main">
-        <p class="kiiras">Sikeres kijelentkezés</p>
-        <p class="kiiras">Várunk vissza!</p>
+        <p class="kiiras">A regisztráció és fiókredszer fejlesztése folyamatban!</p>
     </div>
 
     
