Kosár működése kész, már csak dizájn kell, külön jsbe írni a scriptet.

--- a/HTML/blog.html
+++ b/HTML/blog.html
@@ -111,6 +111,14 @@
     </div>
     <div class="route">
         <p id="blogTart">Home/Blog</p>
+        <a href="./HTML/kosar.html">
+            <div style="margin-right: 10%;" class="cart-icon-container">
+                <a href="./kosar.html"><img src="https://cdn-icons-png.flaticon.com/512/1170/1170678.png" alt="Cart"
+                        id="cart-icon"></a>
+                <span id="cart-count">0</span>
+                <div id="cart-preview" class="hidden"></div>
+            </div>
+        </a>
     </div>
 
     <div class="FoDiv">
