--- a/HTML/myaccount.html
+++ b/HTML/myaccount.html
@@ -112,6 +112,14 @@
     
     <div class="route">
         <p>Home/Account/My Account</p>
+        <a href="./HTML/kosar.html">
+            <div style="margin-right: 10%;" class="cart-icon-container">
+                <a href="./kosar.html"><img src="https://cdn-icons-png.flaticon.com/512/1170/1170678.png" alt="Cart"
+                        id="cart-icon"></a>
+                <span id="cart-count">0</span>
+                <div id="cart-preview" class="hidden"></div>
+            </div>
+        </a>
     </div>
     
     <div class="acctop">
